3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

types/exit/exit.c: Fix bad definition of exit_type_apply.
--
types/{legacy/apply.c, clock/clock.c}, server/ob_types.c: Move apply logic for
  clocks out of legacy area in the ob_method system.
--
types/{legacy/apply.c, exit/exit.c}: Move apply logic for exits out of legacy
  area in the ob_method system.
Alex Schultz 2007-04-05

Tweak harvesting skill per Lalo's suggestions. If a living object is harvested,
 goes to map instead of in the inventory. Also make the key/value checks more meaningful.
 server/c_misc.c
Nicolas Weeger 2007-04-04

server/{spell_attack.c, spell_util.c, spell_effect.c}, include/{libproto.h,
  sproto.h}, types/{spell_effect/spell_effect.c, legacy/process.c}: Move
  ob_process logic for SPELL_EFFECT objects to the ob_method system.
--
plugins/cfpython/cfpython.c: Remove LIGHTNING from cfpython type constants.
--
types/legacy/process.c, common/item.c, include/define.h, server/spell_util.c:
  Remove old LIGHTNING(12) type.
Alex Schultz 2007-04-03

Remove obsolete Flying/CanPassThru properties.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
Nicolas Weeger 2007-04-03

Clean some old stuff, unused functions, ...
 common/arch.c
 common/holy.c
 common/image.c
 common/item.c
 common/loader.l: remove "empty" fields. Those are legacy, and should be removed in maps/archs.
 common/los.c
 common/porting.c
 common/quest.c
 common/treasure.c
 include/define.h
 include/map.h
 include/spelllist.h
 server/apply.c
 server/attack.c
 server/c_object.c
 server/disease.c
 server/gods.c: remove unused follower_remove_similar_item() and misc functions.